feat: integrated aws s3 and dynamodb
