# routes/authRoutes.js
@@ -8,6 +8,6 @@ const router = express.Router();
 router.post('/register', upload.fields([{ name: 'profilePicture', maxCount: 1 }, { name: 'pdf', maxCount: 1 }]), register);
 router.post('/login', login);
 router.post('/forgot-password', forgotPassword);
-router.post('/reset-password',)
+router.post('/reset-password',resetPassword)
 
 module.exports = router;
